2001-07-11  Mark Kettenis  <kettenis@gnu.org>

	* config/powerpc/nm-linux.h (NO_SYS_REG_H): Remove, it's no longer
	used.

2001-07-11  Eli Zaretskii  <eliz@is.elta.co.il>

	* go32-nat.c (info_dos_cmdlist): New variable.
	(go32_info_dos_command): New function.
	(_initialize_go32_nat): Convert all DOS-specific commands into
	subcommands of "info dos".  Suggested by Andrew Cagney
	<ac131313@redhat.com>.

2001-07-11  Mark Kettenis  <kettenis@gnu.org>

	* config/nm-linux.h: Fix comments.

	* thread-db.c (enable_thread_event_reporting): Correct warning
	message about getting thread death breakpoint.
	Reported by John S Kallal <jskallal@home.com>.

	* i386-tdep.c (i386_extract_return_value): "Fix" comment.
	(i386_store_return_value): Frob FPU status and tag word to make
	sure the return value is the only value on the FPU stack.

	* config/tm-linux.h: Do not include <signal.h>.  Instead provide
	reasonable defaults for REALTIME_LO and REALTIME_HI if they're not
	already defined.
	* config/nm-linux.h: Include <signal.h>.
	[__SIGRTMIN] (REALTIME_LO, REALTIME_HI): Define to __SIGRTMIN and
	(__SIGRTMAX + 1) respectively.

2001-07-10  Andrew Cagney  <ac131313@redhat.com>

	* mcore-rom.c: Include "serial.h".
	* Makefile.in (mcore-rom.o): Depends on "serial.h".

2001-07-10  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (remote-bug.o): Depends on serial.h.
	* remote-bug.c: Include "serial.h".
	* MAINTAINERS: Mark m88k target as buildable.
	* TODO: Update.

2001-07-10  Jim Blandy  <jimb@redhat.com>

	Clean up the D10V port so that GDB and the target program no
	longer disagree on how big pointers are.
	* findvar.c (value_from_register): Remove special case code for D10V.
	* printcmd.c (print_frame_args): Same.
	* valops.c (value_at, value_fetch_lazy): Same.
	* values.c (unpack_long): Same.
	* gdbarch.sh: Changes to effect the following:
	* gdbarch.h (GDB_TARGET_IS_D10V, D10V_MAKE_DADDR,
	gdbarch_d10v_make_daddr_ftype, gdbarch_d10v_make_daddr,