@@ -1,5 +1,8 @@
 2001-07-11  Mark Kettenis  <kettenis@gnu.org>
 
+	* config/alpha/nm-linux.h (TARGET_ELF64, PSIGNAL_IN_SIGNAL_H):
+	Remove unused macro's.
+
 	* config/powerpc/nm-linux.h (NO_SYS_REG_H): Remove, it's no longer
 	used.
 
